--- a/style.css
+++ b/style.css
@@ -7,3 +7,51 @@
     top: 50%;
     transform: translate(-50%, -50%)
 }
+.search {
+    width: 100%;
+    position: relative;
+}
+.searchTerm {
+    float: left;
+    width: 100%;
+    border: 3px solid;
+    padding: 5px;
+    height: 20px;
+    border-radius: 5px;
+    outline: none;
+}
+.searchTerm:focus {
+    color: khaki;
+}
+.searchButton {
+    position: absolute;
+    right: -50px;
+    width: 40px;
+    height: 36px;
+    border: px solid;
+    background: olive;
+    text-align: center;
+    color: rebeccapurple;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 20px;
+}
+.wrap {
+    width: 30%;
+    position: absolute;
+    top: 65%;
+    left: 53%;
+    transform: translate(-50%, -50%);
+}
+#navigation a{
+    display: inline-block;
+    padding-left: 15px;
+    color: #000;
+    opacity: 1;
+}
+a {
+    text-decoration: none;
+    font-family: arial, sans-serif;
+    font-size: 13px;
+}
+
