--- a/style.css
+++ b/style.css
@@ -1,57 +1,135 @@
-.google-logo {
-    width: 100px;
-    height: 100px;
+.main-container {
     position: absolute;
-    left: 50%;
-    margin-left: -50px;
-    top: 50%;
-    transform: translate(-50%, -50%)
-}
-.search {
+    top: 0;
     width: 100%;
-    position: relative;
+    height: 100%
 }
-.searchTerm {
-    float: left;
-    width: 100%;
-    border: 3px solid;
-    padding: 5px;
-    height: 20px;
-    border-radius: 5px;
-    outline: none;
+.navbar {
+    margin: 1em;
+    padding-right: 1em;
+    line-height: 30px;
 }
-.searchTerm:focus {
-    color: khaki;
+.float-right{
+    float: right;
 }
-.searchButton {
-    position: absolute;
-    right: -50px;
-    width: 40px;
-    height: 36px;
-    border: px solid;
-    background: olive;
-    text-align: center;
-    color: rebeccapurple;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 20px;
+ul{
+    list-style: none;
 }
-.wrap {
-    width: 30%;
-    position: absolute;
-    top: 65%;
-    left: 53%;
-    transform: translate(-50%, -50%);
-}
-#navigation a{
+ul li{
     display: inline-block;
     padding-left: 15px;
-    color: #000;
-    opacity: 1;
 }
-a {
+a{
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
-    font-family: arial, sans-serif;
-    font-size: 13px;
+    font-size: 15px;
+    opacity: 0.75;
 }
+a:hover{
+    text-decoration: underline;
+}
+.apps-button{
+    width: 20px;
+    height: 20px;
+    vertical-align: middle;
+}
+.apps-button:hover{
+    filter: brightness(0%)
+}
+li button{
+    color:#fff;
+    background-color: #4285f4;
+    border: 1px solid #4285f4;
+    font-weight: bold;
+    border-radius: 2px;
+    line-height: 28px;
+    padding: 0px 12px;    
+}
+/* this is google logo */
+.google-logo {
+    margin-top: 10em;
+    text-align: center;
+}
+.search-bar-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1em;
+}
+.search-bar-outer {
+    width: 580px;
+    height: 50px;
+    border: 1px solid #ccc;
+    box-shadow: 1px 2px 3px #ddd;
+    border-radius: 2px;
+    display: flex;
+    align-items: center;
+}
+.search-bar-inner {
+    outline: none;
+    border: none;
+    width: 530px;
+    margin-left: 10px;
+}
+.voice-search > img {
+    width: 24px;
+    height: 30px;
+    margin-top: 4px;
+}
+/* search buttons */
+.buttons-container {
+    margin-top: 1.5em;
+    text-align: center;
+}
+#bc_submit:hover {
+    background-image: -moz-linear-gradient(top #f8f8f8, #f1f1f1);-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    background-color: #f8f8f8;
+    background-image: linear-gradient(top, #f8f8f8, #f1ff1);
+    background-image:-o-linear-gradient(top,#f8f8f8,#f1f1f1);
+    border:1px solid #c6c6c6;
+    box-shadow:0 1px 1px rgba(0,0,0,0.1);
+    color:#222;
+    padding: 0 6px;
+}
+.buttons-container > button {
+	height: 46px;
+    background-color: #eee;
+    border: 1px solid #eee;
+    border-radius: 2px;
+    color: #757575;
+    cursor: pointer;
+    font-family: arial,sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    margin: 11px 4px;
+    padding: 0 16px;
+    text-align: center;
+}
+.footer {
+    font-size: 13px;
+    opacity: 0.75;
+    color: gray;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    line-height: 40px;
+    padding: 0em 1em;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
